swagger-express-mw was removed
